--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-	<title>Using turn.js and the new zoom feature</title>
+	<title>Bonopizza e-book</title>
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
+	<link rel="icon" href="./ribbon_favicon.png" type="image/x-icon">
 	<script type="text/javascript" src="js/jquery.min.1.7.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.8.20.custom.min.js"></script>
 	<script type="text/javascript" src="js/modernizr.2.5.3.min.js"></script>
